commit al master de blogpost en su version mas reciente

--- a/blogpost.html
+++ b/blogpost.html
@@ -4,8 +4,13 @@
         <link rel="stylesheet" href= "css/Styles.css" />
     </head>
     <body>
+        <div id="container"> 
+        <div id= "post">
         <h3> Sin animo de ofender</h3>
         <p> este parrafo es enteramente un teto demostrativo para mi practica de git,
-            no debe ser toma en serio</p>
+            no debe ser toma en serio, en esta oportunidad aprendera las cosas increibles
+             de implementar ramas en mis proyectos</p>
+            </div>
+        </div>
     </body>
 </html>
