Estructura inicial de la cabecera

--- a/blogpost.html
+++ b/blogpost.html
@@ -5,6 +5,9 @@
     </head>
     <body>
         <div id="container"> 
+            <div id="cabecera">
+                cabecera
+            </div>
         <div id= "post">
         <h3> Sin animo de ofender</h3>
         <p> este parrafo es enteramente un teto demostrativo para mi practica de git,
