Finalizada la cabecera con diseño azul

--- a/blogpost.html
+++ b/blogpost.html
@@ -6,7 +6,10 @@
     <body>
         <div id="container"> 
             <div id="cabecera">
-                cabecera
+                hiperblog
+                <span id="tagline">
+                    Tu blog de confianza
+                </span>
             </div>
         <div id= "post">
         <h3> Sin animo de ofender</h3>
