--- a/blogpost.html
+++ b/blogpost.html
@@ -16,6 +16,11 @@
         <p> este parrafo es enteramente un teto demostrativo para mi practica de git,
             no debe ser toma en serio, en esta oportunidad aprendera las cosas increibles
              de implementar ramas en mis proyectos</p>
+             <p>
+                Los blogs son la mejor forma de compartir informacion y tu ideas.
+                Mucho mas que ir a conferencias o salir de youtube. Excepto si eres
+                 un rockstar.Pero estadisticamente no lo eres....por ahora.
+             </p>
             </div>
         </div>
     </body>
