--- a/blogpost.html
+++ b/blogpost.html
@@ -8,7 +8,7 @@
             <div id="cabecera">
                 hiperblog
                 <span id="tagline">
-                    Tu blog de confianza
+                    Tu blog de cabecera
                 </span>
             </div>
         <div id= "post">
