--- a/blogpost.html
+++ b/blogpost.html
@@ -8,7 +8,7 @@
             <div id="cabecera">
                 hiperblog
                 <span id="tagline">
-                    Tu blog de confianza
+                    Tu blog maestro
                 </span>
             </div>
         <div id= "post">
@@ -20,6 +20,8 @@
                 Los blogs son la mejor forma de compartir informacion y tu ideas.
                 Mucho mas que ir a conferencias o salir de youtube. Excepto si eres
                  un rockstar.Pero estadisticamente no lo eres....por ahora.
+             </p>
+             <p> suscribete y dale like
              </p>
             </div>
         </div>
