una version del hiperblog

--- a/blogpost.html
+++ b/blogpost.html
@@ -1,6 +1,6 @@
-<html>
+      <html>
     <head>
-        <title> No tengo imaginacion para crear un titulo pero esta vez sera diferente</title>
+        <title> No tengo imaginacion para crear un titulo pero esta vez sera diferente 2.0</title>
         <link rel="stylesheet" href= "css/Styles.css" />
     </head>
     <body>
